--- a/Fody.targets
+++ b/Fody.targets
@@ -36,7 +36,8 @@
   </Choose>
   <PropertyGroup>
     <IntermediateDir>$(ProjectDir)$(IntermediateOutputPath)</IntermediateDir>
-    <FodyMessageImportance Condition="$(FodyMessageImportance) == '' Or $(FodyMessageImportance) == '*Undefined*'">Low</FodyMessageImportance>
+    <FodyMessageImportance Condition="$(FodyMessageImportance) == '' Or $(FodyMessageImportance) == '*Undefined*'">High</FodyMessageImportance>
+    <FodySignAssembly Condition="$(FodySignAssembly) == '' Or $(FodySignAssembly) == '*Undefined*'">$(SignAssembly)</FodySignAssembly>
   </PropertyGroup>
   <UsingTask
       TaskName="Fody.WeavingTask"
@@ -53,7 +54,7 @@
           ProjectDirectory="$(ProjectDir)"
           SolutionDir="$(FodySolutionDir)"
           References="@(ReferencePath)"
-          SignAssembly="$(SignAssembly)"
+          SignAssembly="$(FodySignAssembly)"
           ReferenceCopyLocalPaths="@(ReferenceCopyLocalPaths)"
       />
   </Target>
@@ -65,12 +66,12 @@
     <Fody.WeavingTask
           AssemblyPath="$(TargetPath)"
           IntermediateDir="$(IntermediateDir)"
-          KeyFilePath="$(KeyOriginatorFile)"
+          KeyFilePath="$(FodyKeyFilePath)"
           MessageImportance="$(FodyMessageImportance)"
           ProjectDirectory="$(ProjectDir)"
           SolutionDir="$(FodySolutionDir)"
           References="@(ReferencePath)"
-          SignAssembly="$(SignAssembly)"
+          SignAssembly="$(FodySignAssembly)"
           ReferenceCopyLocalPaths="$(ReferenceCopyLocalPaths)"
       />
   </Target>
