--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Caseless.Fody" version="1.1.0.0" targetFramework="net40" />
   <package id="EmptyConstructor.Fody" version="0.3.0.0" targetFramework="net40" />
+  <package id="MethodTimer.Fody" version="1.10.0.0" targetFramework="net40" />
   <package id="Stamp.Fody" version="0.1.1.0" targetFramework="net40" />
   <package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
 </packages>
