--- a/FodyIsolated/packages.config
+++ b/FodyIsolated/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caseless.Fody" version="1.1.0.0" targetFramework="net40" />
+  <package id="MethodTimer.Fody" version="1.10.0.0" targetFramework="net40" />
   <package id="Stamp.Fody" version="0.1.1.0" targetFramework="net40" />
   <package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
 </packages>
