--- a/Tools/Fody/Fody.targets
+++ b/Tools/Fody/Fody.targets
@@ -36,7 +36,7 @@
   </Choose>
   <PropertyGroup>
     <IntermediateDir>$(ProjectDir)$(IntermediateOutputPath)</IntermediateDir>
-    <FodyMessageImportance Condition="$(FodyMessageImportance) == '' Or $(FodyMessageImportance) == '*Undefined*'">High</FodyMessageImportance>
+    <FodyMessageImportance Condition="$(FodyMessageImportance) == '' Or $(FodyMessageImportance) == '*Undefined*'">Low</FodyMessageImportance>
     <FodySignAssembly Condition="$(FodySignAssembly) == '' Or $(FodySignAssembly) == '*Undefined*'">$(SignAssembly)</FodySignAssembly>
   </PropertyGroup>
   <UsingTask
@@ -46,6 +46,7 @@
       AfterTargets="AfterCompile"
       Name="WinFodyTarget"
       Condition=" '$(OS)' == 'Windows_NT'">
+
     <Fody.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
           IntermediateDir="$(IntermediateDir)"
@@ -66,7 +67,7 @@
     <Fody.WeavingTask
           AssemblyPath="$(TargetPath)"
           IntermediateDir="$(IntermediateDir)"
-          KeyFilePath="$(KeyOriginatorFile)"
+          KeyFilePath="$(FodyKeyFilePath)"
           MessageImportance="$(FodyMessageImportance)"
           ProjectDirectory="$(ProjectDir)"
           SolutionDir="$(FodySolutionDir)"
