--- a/FodyIsolated/FodyIsolated.csproj
+++ b/FodyIsolated/FodyIsolated.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="MethodTimer">
       <HintPath>..\packages\MethodTimer.Fody.1.10.0.0\lib\portable-net4+sl4+wp7+win8\MethodTimer.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>..\Lib\Cecil\Mono.Cecil.dll</HintPath>
@@ -60,7 +61,7 @@
     <Compile Include="AssemblyLoader.cs" />
     <Compile Include="AssemblyReferenceFinder.cs" />
     <Compile Include="AssemblyResolver.cs" />
-    <Compile Include="DelegateBuilder.cs" />
+    <Compile Include="DelegateBuilders\DelegateBuilder.cs" />
     <Compile Include="DelegateBuilders\ExecuteDelegateBuilder.cs" />
     <Compile Include="MethodTimeLogger.cs" />
     <Compile Include="DelegateBuilders\PropertyDelegateBuilder.cs" />
