move over to a nuget package

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
 ForSample/
+NugetBuild/
 ChocolateyNuGetBuild/
 
 # Visual Studio profiler
