--- a/NuGet/Nuget.csproj
+++ b/NuGet/Nuget.csproj
@@ -12,12 +12,12 @@
     <ConfigurationName>Release</ConfigurationName>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="init.ps1" />
     <None Include="Fody.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="install.ps1" />
     <None Include="uninstall.ps1" />
+    <Content Include="readme.txt" />
     <Content Include="FodyWeavers.xml" />
     <Content Include="Fody_ToBeDeleted.txt" />
   </ItemGroup>
@@ -48,7 +48,7 @@
     <Copy SourceFiles="$(SolutionDir)Fody.targets" DestinationFolder="$(SolutionDir)NuGetBuild" />
     <Copy SourceFiles="$(SolutionDir)NuGet\Fody_ToBeDeleted.txt" DestinationFolder="$(SolutionDir)NuGetBuild\Content" />
     <Copy SourceFiles="$(ProjectDir)install.ps1" DestinationFolder="$(SolutionDir)NuGetBuild\Tools" />
-    <Copy SourceFiles="$(ProjectDir)init.ps1" DestinationFolder="$(SolutionDir)NuGetBuild\Tools" />
+    <Copy SourceFiles="$(ProjectDir)readme.txt" DestinationFolder="$(SolutionDir)NuGetBuild" />
     <Copy SourceFiles="$(ProjectDir)uninstall.ps1" DestinationFolder="$(SolutionDir)NuGetBuild\Tools" />
     <PepitaPackage.WeavingTask NuGetBuildDirectory="$(SolutionDir)NuGetBuild" MetadataAssembly="$(SolutionDir)Fody\bin\$(ConfigurationName)\Fody.dll" />
   </Target>
