--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caseless.Fody" version="1.1.0.0" targetFramework="net40" />
-  <package id="EmptyConstructor.Fody" version="0.3.0.0" targetFramework="net40" />
-  <package id="MethodTimer.Fody" version="1.10.0.0" targetFramework="net40" />
-  <package id="Stamp.Fody" version="0.1.1.0" targetFramework="net40" />
-  <package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
+  <package id="Caseless.Fody" version="1.2.1.1" targetFramework="net40" />
+  <package id="EmptyConstructor.Fody" version="0.4.1.1" targetFramework="net40" />
+  <package id="Fody" version="1.13.6.1" targetFramework="net40" />
+  <package id="MethodTimer.Fody" version="1.11.1.2" targetFramework="net40" />
+  <package id="Stamp.Fody" version="0.5.1.2" targetFramework="net40" />
+  <package id="Virtuosity.Fody" version="1.19.1.1" targetFramework="net40" />
 </packages>
