--- a/FodyCommon/packages.config
+++ b/FodyCommon/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Stamp.Fody" version="0.1.1.0" targetFramework="net40" />
+  <package id="Fody" version="1.13.6.1" targetFramework="net40" />
+  <package id="Stamp.Fody" version="0.5.1.2" targetFramework="net40" />
 </packages>
