--- a/FodyIsolated.Tests/FodyIsolated.Tests.csproj
+++ b/FodyIsolated.Tests/FodyIsolated.Tests.csproj
@@ -66,7 +66,9 @@
     <Compile Include="WeaverInitialiserTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FodyCommon\FodyCommon.csproj">
