--- a/Integration/WithNugetAndInSolutionWeavers/packages.config
+++ b/Integration/WithNugetAndInSolutionWeavers/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Virtuosity.Fody" version="1.16.0.0" targetFramework="net40" />
+  <package id="Fody" version="1.13.6.1" targetFramework="net40" />
+  <package id="Virtuosity.Fody" version="1.19.1.1" targetFramework="net40" />
 </packages>
