--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.13.10.0" targetFramework="net40" />
+  <package id="ModuleInit.Fody" version="1.5.0.0" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
 </packages>
