--- a/FodyIsolated/packages.config
+++ b/FodyIsolated/packages.config
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caseless.Fody" version="1.2.3" targetFramework="net40" />
   <package id="Fody" version="1.14.0" targetFramework="net40" />
   <package id="MethodTimer.Fody" version="1.11.4" targetFramework="net40" />
-  <package id="Stamp.Fody" version="0.7.1" targetFramework="net40" />
-  <package id="Virtuosity.Fody" version="1.19.3" targetFramework="net40" />
+  <package id="Stamp.Fody" version="0.7.2" targetFramework="net40" />
+  <package id="Virtuosity.Fody" version="1.19.4.0" targetFramework="net40" />
 </packages>
