--- a/NuGet/Fody.nuspec
+++ b/NuGet/Fody.nuspec
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata>
+  <metadata minClientVersion="2.7" >
     <id>Fody</id>
     <version>$version$</version>
     <title>Fody</title>
