--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.19.0.0" targetFramework="net40" />
-  <package id="ModuleInit.Fody" version="1.5.3" targetFramework="net40" />
-  <package id="Moq" version="4.1.1311.0615" targetFramework="net40" />
+  <package id="Fody" version="1.19.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="ModuleInit.Fody" version="1.5.5.0" targetFramework="net40" developmentDependency="true" />
+  <package id="Moq" version="4.2.1312.1622" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
