--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caseless.Fody" version="1.3.0.0" targetFramework="net40" />
-  <package id="EmptyConstructor.Fody" version="1.0.0.0" targetFramework="net40" />
-  <package id="Fody" version="1.19.0.0" targetFramework="net40" />
-  <package id="MethodTimer.Fody" version="1.13.0.0" targetFramework="net40" />
+  <package id="Caseless.Fody" version="1.3.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="EmptyConstructor.Fody" version="1.0.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="1.19.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="MethodTimer.Fody" version="1.13.1.0" targetFramework="net40" developmentDependency="true" />
   <package id="Stamp.Fody" version="0.7.2" targetFramework="net40" />
-  <package id="Virtuosity.Fody" version="1.19.4.0" targetFramework="net40" />
+  <package id="Virtuosity.Fody" version="1.19.5.0" targetFramework="net40" developmentDependency="true" />
 </packages>
