--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -4,4 +4,6 @@
   <package id="ModuleInit.Fody" version="1.5.5.0" targetFramework="net40" developmentDependency="true" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="Octokit" version="0.2.1" targetFramework="net45" />
+  <package id="SyncOMatic" version="0.1.1.0" targetFramework="net45" />
 </packages>
