--- a/NuGet/Fody.nuspec
+++ b/NuGet/Fody.nuspec
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata minClientVersion="2.7" >
+  <metadata minClientVersion="2.8" >
     <id>Fody</id>
     <version>$version$</version>
     <title>Fody</title>
     <authors>Simon Cropp</authors>
     <owners>Simon Cropp</owners>
+    <developmentDependency>true</developmentDependency>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://github.com/Fody/Fody</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
